--- a/escorts_directory/escorts_directory.csproj
+++ b/escorts_directory/escorts_directory.csproj
@@ -15,4 +15,13 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
+	<ItemGroup>
+	  <Content Update="Views\Home\City.cshtml">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Views\Escorts\" />
+	</ItemGroup>
 </Project>
