--- a/escorts_directory/appsettings.Development.json
+++ b/escorts_directory/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "DetailedErrors": false
 }
